examples/test/testpolicy15492.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15492
  namespace: namespace349
spec:
  podSelector:
    matchLabels:
      key9: value19
      key12: value19
      key19: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value43
      podSelector:
        matchLabels:
          key29: value12
          key43: value46
